@@ -1,6 +1,7 @@
 evolution-data-server (3.20.4-2) UNRELEASED; urgency=medium
 
   * Move chmod/chgrp calls for camel-lock-helper to override_dh_fixperms.
+  * Run override_dh_fixperms only for arch-any build.
 
  -- Michael Biebl <biebl@debian.org>  Fri, 15 Jul 2016 19:32:56 +0200
 
